fix: z-index error

--- a/styles/theme.styl
+++ b/styles/theme.styl
@@ -234,7 +234,7 @@ $navHeight = 60px
   background-color: #323746;
   padding: 0;
   position: fixed;
-  z-index: 1000;
+  z-index: 10000;
   * {
     float: left;
     color: white;
@@ -439,7 +439,7 @@ $navHeight = 60px
     position: fixed;
     background-color: #f7f8fa;
     height: 100%;
-    z-index: 99;
+    z-index: 9999;
     overflow: visible;
   .rong-sidebar
     position: absolute;
@@ -506,7 +506,7 @@ $navHeight = 60px
     left: 174px;
     background-color: white;
     overflow: auto;
-    top: 40px;
+    top: -30px;
     left: 99%;
     z-index: 100;
     padding: 30px;
